build/log/idf_py_stderr_output_25348
Command: make -j 10 all
In file included from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:1:
/home/fus/Documents/DO-AN-02/comDriver/spi/../../helper/general.h:71:24: warning: 'currentSystemMode' initialized and declared 'extern'
   71 | extern volatile flag_t currentSystemMode = -1;
      |                        ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/../../helper/general.h:87:14: warning: 'comObject' initialized and declared 'extern'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:1:
/home/fus/Documents/DO-AN-02/comDriver/i2c/../../helper/general.h:71:24: warning: 'currentSystemMode' initialized and declared 'extern'
   71 | extern volatile flag_t currentSystemMode = -1;
      |                        ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/i2c/../../helper/general.h:87:14: warning: 'comObject' initialized and declared 'extern'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/i2c/i2c.c:3:9: note: '#pragma message: i2c.c is compiling...'
    3 | #pragma message("i2c.c is compiling...")
      |         ^~~~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:6:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/../../helper/general.h:71:24: warning: 'currentSystemMode' initialized and declared 'extern'
   71 | extern volatile flag_t currentSystemMode = -1;
      |                        ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/../../helper/general.h:87:14: warning: 'comObject' initialized and declared 'extern'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:10:9: note: '#pragma message: oled128x64.c is compiling...'
   10 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledResetView':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:132:46: warning: passing argument 2 of 'i2cSetTransmitBuffer' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  132 |     ret = i2cSetTransmitBuffer(oled->i2cDev, cmds, sizeof(cmds));
      |                                              ^~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:62:49: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   62 | def i2cSetTransmitBuffer(i2cDev_t * dev, void * txdPtr, size_t size);
      |                                          ~~~~~~~^~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/main/sender.h:1,
                 from /home/fus/Documents/DO-AN-02/main/do-an-02.c:2:
/home/fus/Documents/DO-AN-02/main/../helper/general.h:71:24: warning: 'currentSystemMode' initialized and declared 'extern'
   71 | extern volatile flag_t currentSystemMode = -1;
      |                        ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../helper/general.h:87:14: warning: 'comObject' initialized and declared 'extern'
   87 | extern void* comObject = NULL;
      |              ^~~~~~~~~
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'oledTask':
/home/fus/Documents/DO-AN-02/main/sender.h:112:10: warning: unused variable 'c' [-Wunused-variable]
  112 |     char c[] = "--> 0";
      |          ^
/home/fus/Documents/DO-AN-02/main/sender.h: In function 'modeSwitch':
/home/fus/Documents/DO-AN-02/main/sender.h:212:40: error: passing argument 1 of 'destroyI2CDevice' from incompatible pointer type [-Wincompatible-pointer-types]
  212 |                 ret = destroyI2CDevice((i2cDev_t**)&comObject);
      |                                        ^~~~~~~~~~~~~~~~~~~~~~
      |                                        |
      |                                        i2cDev_t **
In file included from /home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/oled128x64.h:4,
                 from /home/fus/Documents/DO-AN-02/main/sender.h:4:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:109:33: note: expected 'i2cDev_t *' but argument is of type 'i2cDev_t **'
  109 | def destroyI2CDevice(i2cDev_t * dev);
      |                      ~~~~~~~~~~~^~~
/home/fus/Documents/DO-AN-02/main/sender.h:265:5: error: label 'modeSwitch_ReturnERR' defined but not used [-Werror=unused-label]
  265 |     modeSwitch_ReturnERR:
      |     ^~~~~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c: In function 'app_main':
/home/fus/Documents/DO-AN-02/main/do-an-02.c:42:59: warning: passing argument 4 of 'xTaskCreate' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
   42 |     xTaskCreate(prepairDataTask, "prepairDataTask", 2048, &byteData, 7, NULL);
      |                                                           ^~~~~~~~~
In file included from /home/fus/.fus/esp-idf/components/freertos/esp_additions/include/freertos/idf_additions.h:20,
                 from /home/fus/.fus/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from /home/fus/Documents/DO-AN-02/main/../helper/espRTOSWrapper.h:4,
                 from /home/fus/Documents/DO-AN-02/main/../helper/general.h:33:
/home/fus/.fus/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:374:42: note: expected 'void * const' but argument is of type 'volatile uint8_t *' {aka 'volatile unsigned char *'}
  374 |                             void * const pvParameters,
      |                             ~~~~~~~~~~~~~^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.c:46:59: warning: passing argument 4 of 'xTaskCreate' discards 'volatile' qualifier from pointer target type [-Wdiscarded-qualifiers]
   46 |     xTaskCreate(modeControlTask, "modeControlTask", 2048, &byteData, 7, NULL);
      |                                                           ^~~~~~~~~
/home/fus/.fus/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:374:42: note: expected 'void * const' but argument is of type 'volatile uint8_t *' {aka 'volatile unsigned char *'}
  374 |                             void * const pvParameters,
      |                             ~~~~~~~~~~~~~^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/main/../comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7426: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
